--- a/app/src/main/res/layout/appbar_layout.xml
+++ b/app/src/main/res/layout/appbar_layout.xml
@@ -10,9 +10,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="@string/app_name"
+        android:text="@string/typer"
         android:textColor="@android:color/white"
-        android:textSize="30sp"
+        android:textSize="26sp"
         android:textStyle="bold"
         android:typeface="monospace" />
+
 </LinearLayout>
