--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -1,7 +1,7 @@
 <PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <Preference
-        app:key="signature"
+        app:key="text"
         app:title="Text to type..." />
 
     <PreferenceCategory app:title="@string/messages_header">
